src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void* cv_initCameraMatrix2D_0(void* objectPoints, void* imagePoints, cv::Size imageSize, double aspectRatio);
extern "C" __declspec(dllexport) double cv_calibrateCamera_0(void* objectPoints, void* imagePoints, cv::Size imageSize, void* cameraMatrix, void* distCoeffs, void* rvecs, void* tvecs, void* stdDeviationsIntrinsics, void* stdDeviationsExtrinsics, void* perViewErrors, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_calibrateCamera_1(void* objectPoints, void* imagePoints, cv::Size imageSize, void* cameraMatrix, void* distCoeffs, void* rvecs, void* tvecs, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_calibrateCameraRO_0(void* objectPoints, void* imagePoints, cv::Size imageSize, int iFixedPoint, void* cameraMatrix, void* distCoeffs, void* rvecs, void* tvecs, void* newObjPoints, void* stdDeviationsIntrinsics, void* stdDeviationsExtrinsics, void* stdDeviationsObjPoints, void* perViewErrors, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_calibrateCameraRO_1(void* objectPoints, void* imagePoints, cv::Size imageSize, int iFixedPoint, void* cameraMatrix, void* distCoeffs, void* rvecs, void* tvecs, void* newObjPoints, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_stereoCalibrate_0(void* objectPoints, void* imagePoints1, void* imagePoints2, void* cameraMatrix1, void* distCoeffs1, void* cameraMatrix2, void* distCoeffs2, cv::Size imageSize, void* R, void* T, void* E, void* F, void* rvecs, void* tvecs, void* perViewErrors, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_stereoCalibrate_1(void* objectPoints, void* imagePoints1, void* imagePoints2, void* cameraMatrix1, void* distCoeffs1, void* cameraMatrix2, void* distCoeffs2, cv::Size imageSize, void* R, void* T, void* E, void* F, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_stereoCalibrate_2(void* objectPoints, void* imagePoints1, void* imagePoints2, void* cameraMatrix1, void* distCoeffs1, void* cameraMatrix2, void* distCoeffs2, cv::Size imageSize, void* R, void* T, void* E, void* F, void* perViewErrors, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_registerCameras_0(void* objectPoints1, void* objectPoints2, void* imagePoints1, void* imagePoints2, void* cameraMatrix1, void* distCoeffs1, int cameraModel1, void* cameraMatrix2, void* distCoeffs2, int cameraModel2, void* R, void* T, void* E, void* F, void* rvecs, void* tvecs, void* perViewErrors, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_registerCameras_1(void* objectPoints1, void* objectPoints2, void* imagePoints1, void* imagePoints2, void* cameraMatrix1, void* distCoeffs1, int cameraModel1, void* cameraMatrix2, void* distCoeffs2, int cameraModel2, void* R, void* T, void* E, void* F, void* perViewErrors, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_calibrateMultiview_0(void* objPoints, void* imagePoints, void* imageSize, void* detectionMask, void* models, void* Ks, void* distortions, void* Rs, void* Ts, void* initializationPairs, void* rvecs0, void* tvecs0, void* perFrameErrors, void* flagsForIntrinsics, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_calibrateMultiview_1(void* objPoints, void* imagePoints, void* imageSize, void* detectionMask, void* models, void* Ks, void* distortions, void* Rs, void* Ts, void* flagsForIntrinsics, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_fisheye_calibrate_0(void* objectPoints, void* imagePoints, cv::Size image_size, void* K, void* D, void* rvecs, void* tvecs, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_fisheye_stereoCalibrate_0(void* objectPoints, void* imagePoints1, void* imagePoints2, void* K1, void* D1, void* K2, void* D2, cv::Size imageSize, void* R, void* T, void* rvecs, void* tvecs, int flags, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) double cv_fisheye_stereoCalibrate_1(void* objectPoints, void* imagePoints1, void* imagePoints2, void* K1, void* D1, void* K2, void* D2, cv::Size imageSize, void* R, void* T, int flags, cv::TermCriteria criteria);