src/OpenCV5Sharp/Generated/NativeMethods.Calib.cs

// Copyright (c) 2026 Qourex. Licensed under Apache-2.0.
// See LICENSE file in the project root for full license information.
// AUTO-GENERATED FILE — DO NOT EDIT MANUALLY. Generated by generator.py.

using System;
using System.Runtime.InteropServices;

namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_initCameraMatrix2D_0(IntPtr objectPoints, IntPtr imagePoints, Size imageSize, double aspectRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_calibrateCamera_0(IntPtr objectPoints, IntPtr imagePoints, Size imageSize, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr rvecs, IntPtr tvecs, MatHandle stdDeviationsIntrinsics, MatHandle stdDeviationsExtrinsics, MatHandle perViewErrors, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_calibrateCamera_1(IntPtr objectPoints, IntPtr imagePoints, Size imageSize, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr rvecs, IntPtr tvecs, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_calibrateCameraRO_0(IntPtr objectPoints, IntPtr imagePoints, Size imageSize, int iFixedPoint, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr rvecs, IntPtr tvecs, MatHandle newObjPoints, MatHandle stdDeviationsIntrinsics, MatHandle stdDeviationsExtrinsics, MatHandle stdDeviationsObjPoints, MatHandle perViewErrors, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_calibrateCameraRO_1(IntPtr objectPoints, IntPtr imagePoints, Size imageSize, int iFixedPoint, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr rvecs, IntPtr tvecs, MatHandle newObjPoints, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_stereoCalibrate_0(IntPtr objectPoints, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle cameraMatrix1, MatHandle distCoeffs1, MatHandle cameraMatrix2, MatHandle distCoeffs2, Size imageSize, MatHandle R, MatHandle T, MatHandle E, MatHandle F, IntPtr rvecs, IntPtr tvecs, MatHandle perViewErrors, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_stereoCalibrate_1(IntPtr objectPoints, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle cameraMatrix1, MatHandle distCoeffs1, MatHandle cameraMatrix2, MatHandle distCoeffs2, Size imageSize, MatHandle R, MatHandle T, MatHandle E, MatHandle F, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_stereoCalibrate_2(IntPtr objectPoints, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle cameraMatrix1, MatHandle distCoeffs1, MatHandle cameraMatrix2, MatHandle distCoeffs2, Size imageSize, MatHandle R, MatHandle T, MatHandle E, MatHandle F, MatHandle perViewErrors, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_registerCameras_0(IntPtr objectPoints1, IntPtr objectPoints2, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle cameraMatrix1, MatHandle distCoeffs1, int cameraModel1, MatHandle cameraMatrix2, MatHandle distCoeffs2, int cameraModel2, MatHandle R, MatHandle T, MatHandle E, MatHandle F, IntPtr rvecs, IntPtr tvecs, MatHandle perViewErrors, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_registerCameras_1(IntPtr objectPoints1, IntPtr objectPoints2, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle cameraMatrix1, MatHandle distCoeffs1, int cameraModel1, MatHandle cameraMatrix2, MatHandle distCoeffs2, int cameraModel2, MatHandle R, MatHandle T, MatHandle E, MatHandle F, MatHandle perViewErrors, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_calibrateMultiview_0(IntPtr objPoints, IntPtr imagePoints, IntPtr imageSize, MatHandle detectionMask, MatHandle models, IntPtr Ks, IntPtr distortions, IntPtr Rs, IntPtr Ts, MatHandle initializationPairs, IntPtr rvecs0, IntPtr tvecs0, MatHandle perFrameErrors, IntPtr flagsForIntrinsics, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_calibrateMultiview_1(IntPtr objPoints, IntPtr imagePoints, IntPtr imageSize, MatHandle detectionMask, MatHandle models, IntPtr Ks, IntPtr distortions, IntPtr Rs, IntPtr Ts, IntPtr flagsForIntrinsics, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_fisheye_calibrate_0(IntPtr objectPoints, IntPtr imagePoints, Size image_size, MatHandle K, MatHandle D, IntPtr rvecs, IntPtr tvecs, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_fisheye_stereoCalibrate_0(IntPtr objectPoints, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle K1, MatHandle D1, MatHandle K2, MatHandle D2, Size imageSize, MatHandle R, MatHandle T, IntPtr rvecs, IntPtr tvecs, int flags, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_fisheye_stereoCalibrate_1(IntPtr objectPoints, IntPtr imagePoints1, IntPtr imagePoints2, MatHandle K1, MatHandle D1, MatHandle K2, MatHandle D2, Size imageSize, MatHandle R, MatHandle T, int flags, TermCriteria criteria);
    }
}
